Project

General

Profile

Actions

Bug #20534

closed

unittest_direct_messenger segv

Added by Sage Weil almost 7 years ago. Updated almost 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

 90/178 Test  #97: unittest_direct_messenger ...............***Exception: SegFault  0.11 sec
[==========] Running 7 tests from 1 test case.
[----------] Global test environment set-up.
[----------] 7 tests from DirectMessenger
[ RUN      ] DirectMessenger.SyncDispatch
[       OK ] DirectMessenger.SyncDispatch (0 ms)
[ RUN      ] DirectMessenger.AsyncDispatch
[       OK ] DirectMessenger.AsyncDispatch (1 ms)
[ RUN      ] DirectMessenger.WaitShutdown
[       OK ] DirectMessenger.WaitShutdown (50 ms)
[ RUN      ] DirectMessenger.MarkDown
[       OK ] DirectMessenger.MarkDown (0 ms)
[ RUN      ] DirectMessenger.SendShutdown
[       OK ] DirectMessenger.SendShutdown (0 ms)
[ RUN      ] DirectMessenger.Bind
[       OK ] DirectMessenger.Bind (0 ms)
[ RUN      ] DirectMessenger.StartWithoutPeer
[       OK ] DirectMessenger.StartWithoutPeer (0 ms)
[----------] 7 tests from DirectMessenger (51 ms total)

[----------] Global test environment tear-down
[==========] 7 tests from 1 test case ran. (51 ms total)
[  PASSED  ] 7 tests.
2017-07-05 19:16:31.163883 7f755a57d000 -1 did not load config file, using default settings.
2017-07-05 19:16:31.163904 7f755a57d000 -1 Errors while parsing config file!
2017-07-05 19:16:31.163906 7f755a57d000 -1 parse_file: cannot open /etc/ceph/ceph.conf: (2) No such file or directory
2017-07-05 19:16:31.163906 7f755a57d000 -1 parse_file: cannot open ~/.ceph/ceph.conf: (2) No such file or directory
2017-07-05 19:16:31.163907 7f755a57d000 -1 parse_file: cannot open ceph.conf: (2) No such file or directory
warning: unable to create /var/run/ceph: (13) Permission denied
2017-07-05 19:16:31.164203 7f755a57d000 -1 Errors while parsing config file!
2017-07-05 19:16:31.164213 7f755a57d000 -1 parse_file: cannot open /etc/ceph/ceph.conf: (2) No such file or directory
2017-07-05 19:16:31.164214 7f755a57d000 -1 parse_file: cannot open ~/.ceph/ceph.conf: (2) No such file or directory
2017-07-05 19:16:31.164215 7f755a57d000 -1 parse_file: cannot open ceph.conf: (2) No such file or directory
2017-07-05 19:16:31.206345 7f755a57d000 -1 asok(0x7f755ac84dd0) AdminSocketConfigObs::init: failed: AdminSocket::bind_and_listen: failed to bind the UNIX domain socket to '/var/run/ceph/ceph-unknown.admin.asok': (2) No such file or directory
*** Caught signal (Segmentation fault) **
 in thread 7f75477fe700 thread_name:ms_xio_qs_0
 ceph version 12.0.3-2564-gba00824 (ba00824cfe1b1f69718e79937867c276ce2a5ca9) luminous (rc)
 1: (()+0x63601) [0x7f755a5fb601]
 2: (()+0xf370) [0x7f755a168370]
 3: (QueueStrategy::entry(QueueStrategy::QSThread*)+0x11f) [0x7f7551772d7f]
 4: (QueueStrategy::QSThread::entry()+0x10) [0x7f7551773bf0]
 5: (()+0x7dc5) [0x7f755a160dc5]
 6: (clone()+0x6d) [0x7f754edc176d]

this was from make check bot so no logs or core file.

https://jenkins.ceph.com/job/ceph-pull-requests/27918/consoleFull#116358421777933967-90d1-4877-8d60-89cb08ef4eb1

Actions #1

Updated by Casey Bodley almost 7 years ago

  • Assignee set to Casey Bodley
Actions #2

Updated by Casey Bodley almost 7 years ago

was able to reproduce with:

bin/unittest_direct_messenger --gtest_repeat=1000

passes consistently with this fix:
https://github.com/ceph/ceph/pull/16194

Actions #3

Updated by Nathan Cutler almost 7 years ago

  • Status changed from New to Fix Under Review
Actions #4

Updated by Sage Weil almost 7 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF